Modified Readme Headings

--- a/Readme.ipynb
+++ b/Readme.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Dataset & Main Goals\n",
+    "\n",
     "I chose to investigate the Loan Data From Prosper.\n",
     "My main goals was to investigate what variables were most impactful in predicting estimated returns.\n",
     "\n",
-    "The key findings I had were:\n",
+    "## Key Findings\n",
     "\n",
     "1)There are a very large range of values, from about -20% at the lowest, to about 30% at the highest but the general shape of the graph is close to a normal distribution. However, the curve ramps up starting at around 4%, peaks at around 8% then slowly slopes down to 17.5%. There are a few abnormal peaks and valleys on the way down. All of this is represented in a histogram.\n",
     "\n",
@@ -18,8 +20,16 @@
     "4)Prosperity score was the best indicator of what yield was going to be on a loan. Since people with higher prosperity typically lead to less losses (chargeoffs), lenders are willing to lend to them for a lower yield. Additionally, although the lowest prosper score had the highest estimated loss, it still had the highest predicted yield.\n",
     "The highest group of lending rates is around 30%.\n",
     "\n",
+    "### Sources\n",
     "I used Udacity's lessons as the primary resource for the creation of this project."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
